--- a/app/src/main/res/drawable/title_gradient.xml
+++ b/app/src/main/res/drawable/title_gradient.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
         android:angle="270"
-        android:endColor="#ffffffff"
-        android:centerColor="#99ffffff"
-        android:startColor="@android:color/transparent"
+        android:endColor="#FF000000"
+        android:centerColor="#99000000"
+        android:startColor="#05ffffff"
         android:type="linear" />
 </shape>
