--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -33,6 +33,12 @@
                 app:layout_collapseParallaxMultiplier="0.5"
                 tools:src="@color/colorAccent" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                android:src="@drawable/title_gradient"/>
+
             <include
                 android:id="@+id/toolbar"
                 layout="@layout/include_toolbar" />
