--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -7,6 +7,8 @@
     android:layout_height="@dimen/grid_flag_height"
     android:layout_gravity="center"
     android:layout_margin="@dimen/card_view_margin"
+    android:clickable="true"
+    android:focusable="true"
     card_view:cardCornerRadius="@dimen/card_view_corner">
 
     <ImageView
